Bug 109353 - Listbox doesn't show value (background) if value is just selected (Linux/KDE)
Summary: Listbox doesn't show value (background) if value is just selected (Linux/KDE)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.4.0.2 rc
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0 target:6.1.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2017-07-25 18:54 UTC by Robert Großkopf
Modified: 2018-08-29 16:43 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Open the form "Gegenstand" and chose a value with one of the listboxes ... (34.39 KB, application/vnd.oasis.opendocument.database)
2017-07-25 18:54 UTC, Robert Großkopf
Details
Shows the unreadable chosen listbox since LO 5.4.0.2 (27.62 KB, application/pdf)
2017-07-25 18:56 UTC, Robert Großkopf
Details
# first bad commit: Fix focus and rollover for vcl::ListBox (4.83 KB, text/plain)
2018-02-02 16:57 UTC, Alex Kempshall
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Robert Großkopf 2017-07-25 18:54:25 UTC
Created attachment 134850 [details]
Open the form "Gegenstand" and chose a value with one of the listboxes ...

Open the attached database.
Open the form "Gegenstand".
Chose some value with any listbox in the area "Filter".

If you will do this with LO up to LO 5.3.5.1, OpenSUSE 42.2, 64bit rpm Linux, the chosen value will be shown with a blue background and white characters.

If you will do this with LO up since LO 5.4.0.2, OpenSUSE 42.2, 64bit rpm Linux, the chosen value will be shown without a blue background and white characters. So you could see nearly nothing. Background seems to be a little bit grey ...
Comment 1 Robert Großkopf 2017-07-25 18:56:22 UTC
Created attachment 134851 [details]
Shows the unreadable chosen listbox since LO 5.4.0.2
Comment 2 Xisco Faulí 2017-07-25 19:55:08 UTC
I can't reproduce it in

Version: 5.4.0.3
Build ID: 92c2794a7c181ba4c1c5053618179937228ed1fb
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

nor

Version: 6.0.0.0.alpha0+
Build ID: fa987cbb813cfd729fe490f2f1258b7c8d7fb174
CPU threads: 4; OS: Linux 4.8; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

do you use gtk, gtk3 or kde?
Comment 3 Alex Thurgood 2017-07-26 09:57:41 UTC
No repro on 

Version: 5.4.0.3
Build ID: 92c2794a7c181ba4c1c5053618179937228ed1fb
Threads CPU : 4; OS : Mac OS X 10.12.6; UI Render : par défaut; 
Locale : fr-FR (fr_FR.UTF-8); Calc: group
Comment 4 Robert Großkopf 2017-07-26 13:59:05 UTC
Seems to be the next special KDE-GUI-Bug together with LO.
Could confirm it is working with GTK2, tested here with xfce.

On the same machine it isn't working with 
Version: 5.4.0.3
Build-ID: 92c2794a7c181ba4c1c5053618179937228ed1fb
CPU-Threads: 4; Betriebssystem:Linux 4.4; UI-Render: Standard; VCL: kde4; 
Gebietsschema: de-DE (de_DE.UTF-8); Calc: group

OpenSUSE 42.2 with KDE-Plasma 5.8.6

Note: GTK2 doesn't change the background-color when a value in the listbox is just selected. KDE will change the background- and the frontcolor and will bring the same result as GTK2 if I push the button of the mouse anywhere in the form after selecting a value.
Comment 5 Buovjaga 2017-08-20 15:42:40 UTC
Repro.

Arch Linux 64-bit, KDE Plasma 5
Version: 6.0.0.0.alpha0+
Build ID: 668ab2e739397e6b095372a1a468bd4f515927b6
CPU threads: 8; OS: Linux 4.12; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on August 20th 2017
Comment 6 Alex Kempshall 2018-02-01 07:37:54 UTC
I have my own application that reproduces this List Box problem.

Reproduced this List Box problem with Kubuntu 17:10 which has LO 5.4.2.2 pre-installed.

Reproduced this List Box problem on Slackware 14.2 with LO 5.4.2.2 running on kde4 when LO compiled with --enable-kde4. 

Same compiled version works correctly on Slackware 14.2 xfce. 

If compiled without --enable-kde4 List Box works successfully on Slackware 14.2 running kde4

Also noticed that If I click on a blank space on the form that the List Box repaints itself correctly.

Also noticed that if I move the file libvclplug_kde4lo.so out of the path then logged out and back in  the List Box works correctly.

No idea what libvclplug_kde4lo.so offers kde users.

Alex
Comment 7 Alex Kempshall 2018-02-02 16:57:54 UTC
Created attachment 139535 [details]
# first bad commit: Fix focus and rollover for vcl::ListBox

Bisect log attached.

# first bad commit: [3f94cf15f9bbb58bb1f4e5ca4cfa10e354c659e3] Fix focus and rollover for vcl::ListBox
Comment 8 Buovjaga 2018-02-02 19:18:16 UTC
(In reply to Alex Kempshall from comment #7)
> Created attachment 139535 [details]
> # first bad commit: Fix focus and rollover for vcl::ListBox
> 
> Bisect log attached.
> 
> # first bad commit: [3f94cf15f9bbb58bb1f4e5ca4cfa10e354c659e3] Fix focus and
> rollover for vcl::ListBox

https://cgit.freedesktop.org/libreoffice/core/commit/?id=3f94cf15f9bbb58bb1f4e5ca4cfa10e354c659e3

jmux: thoughts?
Comment 9 Alex Kempshall 2018-02-19 10:36:51 UTC
I don't know what problem the above commit was addressing. However, the patch below works for me. Would like to know what the developer thinks. 

diff --git a/vcl/source/control/imp_listbox.cxx b/vcl/source/control/imp_listbox.cxx
index a6ca96f0a79a..e33d8e14f3de 100644
--- a/vcl/source/control/imp_listbox.cxx
+++ b/vcl/source/control/imp_listbox.cxx
@@ -2674,7 +2674,7 @@ void ImplWin::ImplDraw(vcl::RenderContext& rRenderContext, bool bLayout)
                 if( bNativeOK && (nState & ControlState::ROLLOVER) )
                     aColor = rStyleSettings.GetFieldRolloverTextColor();
                 else
-                    aColor = rStyleSettings.GetHighlightTextColor();
+                    aColor = rStyleSettings.GetFieldTextColor();
                 rRenderContext.SetTextColor( aColor );
                 rRenderContext.DrawRect( maFocusRect );
             }
lines 1-13/13 (END)
Comment 10 Xisco Faulí 2018-03-01 13:36:16 UTC
Adding Cc: to Jan-Marek Glogowski
Comment 11 Commit Notification 2018-06-13 07:47:41 UTC
Alex McMurchy1917 committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3f31455fdd10309ab85fc3d324096698d3f38e5b

tdf#109353 - Base: Listbox doesn't show a value.

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Buovjaga 2018-06-13 15:18:00 UTC
Thanks, that fixed it!

Arch Linux 64-bit
Version: 6.2.0.0.alpha0+
Build ID: 98db90e2ccd7cefaa5094c2d1d2af8cb10b4a867
CPU threads: 8; OS: Linux 4.16; UI render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group threaded
Built on June 13th 2018
Comment 13 Xisco Faulí 2018-06-14 10:06:06 UTC
(In reply to Buovjaga from comment #12)
> Thanks, that fixed it!
> 
> Arch Linux 64-bit
> Version: 6.2.0.0.alpha0+
> Build ID: 98db90e2ccd7cefaa5094c2d1d2af8cb10b4a867
> CPU threads: 8; OS: Linux 4.16; UI render: default; VCL: kde4; 
> Locale: fi-FI (fi_FI.UTF-8); Calc: group threaded
> Built on June 13th 2018

Setting to VERIFIED then
Comment 14 Commit Notification 2018-08-29 14:45:18 UTC
Alex McMurchy1917 committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=db55d2a53af04a88ba070e619760f573e89e12fd&h=libreoffice-6-1

tdf#109353 - Base: Listbox doesn't show a value.

It will be available in 6.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Alex Kempshall 2018-08-29 16:43:07 UTC
This patch works for me on master.