tdf#109353 - Base: Listbox doesn't show a value.

This is because text in box is same colour as the background.
This is only an issue for Linux/KDE.
This change fixes this issue.

Change-Id: Icb908ace25c69fd2fb51f8f44082ca6b00f55c43
Reviewed-on: https://gerrit.libreoffice.org/55660
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
(cherry picked from commit 3f31455fdd10309ab85fc3d324096698d3f38e5b)